[package]
name = "titan-unified-spirit-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "titan-unified-spirit-rs — Rust L1b unified-spirit binary for Titan microkernel v2 Phase C C-S4"

[[bin]]
name = "titan-unified-spirit-rs"
path = "src/main.rs"

[lib]
name = "titan_unified_spirit_rs"
path = "src/lib.rs"

[dependencies]
titan-core = { path = "../titan-core" }
titan-bus = { path = "../titan-bus" }
titan-state = { path = "../titan-state" }
titan-clocks = { path = "../titan-clocks" }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "net", "time", "signal", "sync", "fs", "io-util", "macros", "process"] }

# CLI parsing per SPEC §13
clap = { workspace = true, features = ["derive", "env"] }

# Structured-JSON logging per SPEC §16
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
rmpv.workspace = true
serde_bytes.workspace = true

# Sync primitives
parking_lot.workspace = true

# Unix syscalls (prctl)
nix = { workspace = true, features = ["signal"] }

# Hex encoding (authkey, hashes)
hex.workspace = true

# Numeric — V5 TrinityValueNet uses direct Vec<f64>, no ndarray needed.
# rand_distr for Xavier init (added in C4-3a).
rand = { workspace = true }
rand_distr = "0.4"

# Hashing (content-hash gate per master plan §5.3)
blake2 = "0.10"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
ed25519-dalek = { workspace = true }
rand_chacha = "0.3"

[lints]
workspace = true
